<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCF8F2"
    tools:context=".joo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/jooToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A9A9A9"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/joo_profile_svg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:contentDescription="프로필 이미지"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jooToolbar"
        app:srcCompat="@drawable/joo_profile" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/joo_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joo_profile_svg" />


    <TableLayout
        android:id="@+id/joo_table"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#E7D5B4"
        android:padding="2dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#E7D5B4">

            <TextView
                android:layout_width="77dp"
                android:layout_height="44dp"
                android:background="#FCF8F2"
                android:gravity="center"
                android:text="@string/joo_info1"
                android:textColor="#7B5D44"
                android:textSize="20sp" />

            <TextView
                android:layout_width="217dp"
                android:layout_height="44dp"
                android:layout_marginLeft="2dp"
                android:background="#FCF8F2"
                android:gravity="center"
                android:text="@string/joo_age"
                android:textColor="#7B5D44"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#E7D5B4">

            <TextView
                android:layout_height="44dp"
                android:background="#FCF8F2"
                android:gravity="center"
                android:text="@string/joo_info2"
                android:textColor="#7B5D44"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="2dp"
                android:background="#FCF8F2"
                android:gravity="center"
                android:text="@string/joo_mbti"
                android:textColor="#7B5D44"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E7D5B4">

            <TextView
                android:layout_height="44dp"
                android:background="#FCF8F2"
                android:gravity="center"
                android:text="@string/joo_info3"
                android:textColor="#7B5D44"
                android:textSize="20sp" />

            <TextView
                android:layout_height="44dp"
                android:layout_marginLeft="2dp"
                android:background="#FCF8F2"
                android:gravity="center"
                android:text="@string/joo_like"
                android:textColor="#7B5D44"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/joo_introduce_box"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joo_table">


        <TextView
            android:id="@+id/joo_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:text="@string/joo_introduce"
            android:textColor="#926642"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joo_profile_svg" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


